# g

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  KYLIN_SDK_INTEGRATION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  debug_test.cpp  documents.json  kylin_sdk_test_report_1750316494.json  requirements.txt  test_debug.sh  test_kylin_sdk_integration.py  test_new_features.py  test_ui_modifications.py  test_voice_autoplay.py  voice_autoplay_demo.py
backend/: document_processor.py  main.py  rag_engine.py  vector_store.py
config/: app_config.json  ssh_config
docs/: kylin_system_intro.md  remote_debug_quickstart.md  vscode_remote_setup.md
frontend/: index.html
include/ai/: kylin_ai_client.h
include/core/: application.h  config_manager.h  logger.h
include/document/: chunk_manager.h  document_processor.h  markdown_parser.h  pdf_parser.h  text_parser.h
include/rag/: generator.h  rag_engine.h  retriever.h  vector_store.h
include/ui/: chat_widget.h  main_window.h
rag-assistant/: DEPLOYMENT_GUIDE.md  KYLIN_SDK_DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  VOICE_CONTROLS_FEATURE.md  deploy.sh  deploy_with_sdk.sh  desktop_app.py  documents.json  performance_test.py  quick_start.sh  requirements.txt  simple_deploy.sh  start_background.sh  start_service.sh  stop_service.sh  test_pdf_fix.py  test_upload.py  test_voice_controls.py  test_voice_demo.py
rag-assistant/backend/: document_processor.py  kylin_sdk_wrapper.py  main.py  rag_engine.py  vector_store.py
rag-assistant/config/: ai_config.py
rag-assistant/frontend/: index.html
resources/: kylin-qa-assistant.desktop.in  qml.qrc
scripts/: build_kylin.sh  build_qt5_kylin.sh  deploy_and_debug.ps1  diagnose_startup.sh  fix_desktop_entry.sh  fix_installation.sh  install_dependencies_kylin.sh  quick_fix_build.sh  quick_install_kylin.sh  setup_remote_kylin_env.sh  test_build_qt5.sh  test_remote_connection.bat  test_remote_connection.sh  troubleshoot_kylin.sh
src/: CMakeLists.txt  main.cpp
src/core/: application.cpp  config_manager.cpp  logger.cpp
src/document/: chunk_manager.cpp  document_processor.cpp  markdown_parser.cpp  pdf_parser.cpp  text_parser.cpp
src/rag/: rag_engine.cpp  retriever.cpp  vector_store.cpp
src/ui/: main_window.cpp
tests/: CMakeLists.txt  test_chunk_manager.cpp  test_chunk_manager.h  test_config_manager.cpp  test_config_manager.h  test_document_processor.cpp  test_document_processor.h  test_main.cpp  test_markdown_parser.cpp  test_markdown_parser.h  test_pdf_parser.cpp  test_pdf_parser.h  test_rag_engine.cpp  test_rag_engine.h  test_text_parser.cpp  test_text_parser.h  test_vector_store.cpp  test_vector_store.h
